added webpack and drafted node executor

--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "awi",
   "version": "0.0.1",
   "description": "Versatile, modern and lightweight http client based on promises.",
-  "main": "dist/index.js",
+  "main": "build/index.js",
   "types": "types/index.d.ts",
   "scripts": {
     "build": "tslint -p tsconfig.dist.json -c tslint.json && ttsc -p tsconfig.dist.json",
+    "dist": "webpack --mode=production --display=none",
     "test": "mocha test/setup.ts test/**/*.spec.ts -r ts-node/register -r tsconfig-paths/register",
     "coverage": "nyc npm run test"
   },
@@ -29,15 +30,19 @@
     "@zerollup/ts-transform-paths": "^1.6.5",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "mocha": "^5.1.1",
     "nyc": "^13.1.0",
     "sinon": "^5.1.1",
+    "ts-loader": "^5.3.3",
     "ts-mockito": "^2.3.1",
     "ts-node": "^6.1.0",
     "tsconfig-paths": "^3.7.0",
     "tslint": "^5.11.0",
     "ttypescript": "^1.5.6",
     "typescript": "^2.9.1",
+    "webpack": "^4.29.5",
+    "webpack-cli": "^3.2.3",
     "xhr-mock": "^2.4.1",
     "xhr2": "^0.1.4"
   },
