--- a/tsconfig.dist.json
+++ b/tsconfig.dist.json
@@ -5,7 +5,7 @@
     "declarationDir": "types",
     "lib": ["dom", "es6"],
     "module": "commonjs",
-    "outDir": "dist",
+    "outDir": "build",
     "removeComments": true,
     "sourceMap": true,
     "strict": true,
