--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "xhr",
     "http",
     "ajax",
+    "node",
     "client",
     "promise"
   ],
@@ -43,7 +44,6 @@
     "typescript": "^2.9.1",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
-    "xhr-mock": "^2.4.1",
     "xhr2": "^0.1.4"
   },
   "nyc": {
