--- a/tsconfig.dist.json
+++ b/tsconfig.dist.json
@@ -11,7 +11,8 @@
     "strict": true,
     "target": "es6",
     "paths": {
-      "@/*": ["*"]
+      "@/*": ["*"],
+      "@": ["index.ts"]
     },
     "plugins": [
       { "transform": "@zerollup/ts-transform-paths" }
