--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "strict": true,
     "target": "es6",
     "paths": {
-      "@/*": ["*"]
+      "@/*": ["*"],
+      "@": ["index.ts"]
     }
   },
   "include": [
