--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "build/index.js",
   "types": "types/index.d.ts",
   "scripts": {
+    "start": "npm run build",
     "build": "tslint -p tsconfig.dist.json -c tslint.json && ttsc -p tsconfig.dist.json",
     "dist": "webpack --mode=production --display=none",
     "test": "mocha test/setup.ts test/**/*.spec.ts -r ts-node/register -r tsconfig-paths/register",
@@ -17,8 +18,10 @@
     "http",
     "ajax",
     "node",
+    "async",
     "client",
-    "promise"
+    "promise",
+    "typescript"
   ],
   "author": "Pavel Koch <kouks.koch@gmail.com>",
   "repository": "github:kouks/awi",
@@ -27,6 +30,7 @@
     "@types/chai": "^4.1.7",
     "@types/chai-as-promised": "^7.1.0",
     "@types/mocha": "^5.2.5",
+    "@types/nock": "^9.3.1",
     "@types/node": "^10.5.5",
     "@types/sinon": "^4.3.3",
     "@zerollup/ts-transform-paths": "^1.6.5",
@@ -34,16 +38,16 @@
     "chai-as-promised": "^7.1.1",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "mocha": "^5.1.1",
+    "nock": "^10.0.6",
     "nyc": "^13.1.0",
     "sinon": "^5.1.1",
     "ts-loader": "^5.3.3",
-    "ts-mockito": "^2.3.1",
     "ts-node": "^6.1.0",
     "tsconfig-paths": "^3.7.0",
-    "tslint": "^5.11.0",
+    "tslint": "^5.13.1",
     "ttypescript": "^1.5.6",
     "typescript": "^2.9.1",
-    "webpack": "^4.29.5",
+    "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
     "xhr2": "^0.1.4"
   },
