--- a/tsconfig.dist.json
+++ b/tsconfig.dist.json
@@ -6,7 +6,7 @@
     "lib": ["dom", "es6"],
     "module": "commonjs",
     "outDir": "build",
-    "removeComments": true,
+    "removeComments": false,
     "sourceMap": true,
     "strict": true,
     "target": "es6",
