--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "npm run build",
     "build": "tslint -p tsconfig.dist.json -c tslint.json && ttsc -p tsconfig.dist.json",
     "dist": "webpack --mode=production --display=none",
-    "test": "mocha test/setup.ts test/**/*.spec.ts -r ts-node/register -r tsconfig-paths/register",
+    "test": "mocha test/unit/setup.ts test/unit/**/*.spec.ts -r ts-node/register -r tsconfig-paths/register",
+    "test:e2e": "mocha test/e2e/setup.ts test/e2e/**/*.spec.ts -r ts-node/register -r tsconfig-paths/register",
     "coverage": "nyc npm run test",
     "coverage:json": "nyc --reporter=json npm run test"
   },
@@ -29,6 +30,8 @@
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/chai-as-promised": "^7.1.0",
+    "@types/koa": "^2.0.48",
+    "@types/koa-router": "^7.0.40",
     "@types/mocha": "^5.2.5",
     "@types/nock": "^9.3.1",
     "@types/node": "^10.12.29",
@@ -37,6 +40,8 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "friendly-errors-webpack-plugin": "^1.7.0",
+    "koa": "^2.7.0",
+    "koa-router": "^7.4.0",
     "mocha": "^5.1.1",
     "nock": "^10.0.6",
     "nyc": "^13.1.0",
