--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tslint -p tsconfig.dist.json -c tslint.json && ttsc -p tsconfig.dist.json",
     "dist": "webpack --mode=production --display=none",
     "test": "mocha test/setup.ts test/**/*.spec.ts -r ts-node/register -r tsconfig-paths/register",
-    "coverage": "nyc npm run test",
+    "coverage": "nyc npm run test && echo \"Ready: file://$(pwd)/coverage/index.html\n\"",
     "coverage:json": "nyc --reporter=json npm run test"
   },
   "keywords": [
