--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Versatile, modern and lightweight http client based on promises.",
   "main": "build/index.js",
   "types": "types/index.d.ts",
+  "sideEffects": false,
   "scripts": {
     "start": "npm run build",
     "build": "tslint -p tsconfig.dist.json -c tslint.json && ttsc -p tsconfig.dist.json",
@@ -34,24 +35,24 @@
     "@types/koa-router": "^7.0.40",
     "@types/mocha": "^5.2.5",
     "@types/nock": "^9.3.1",
-    "@types/node": "^10.12.29",
-    "@types/sinon": "^4.3.3",
+    "@types/node": "^11.11.3",
+    "@types/sinon": "^7.0.10",
     "@zerollup/ts-transform-paths": "^1.6.5",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "koa": "^2.7.0",
     "koa-router": "^7.4.0",
-    "mocha": "^5.1.1",
+    "mocha": "^6.0.2",
     "nock": "^10.0.6",
     "nyc": "^13.3.0",
-    "sinon": "^5.1.1",
+    "sinon": "^7.2.7",
     "ts-loader": "^5.3.3",
-    "ts-node": "^6.1.0",
+    "ts-node": "^8.0.3",
     "tsconfig-paths": "^3.7.0",
-    "tslint": "^5.13.1",
+    "tslint": "^5.14.0",
     "ttypescript": "^1.5.6",
-    "typescript": "^2.9.1",
+    "typescript": "^3.3.3333",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
     "xhr2": "^0.1.4"
@@ -69,6 +70,6 @@
     "all": true
   },
   "dependencies": {
-    "@bausano/data-structures": "^1.0.1"
+    "@bausano/data-structures": "^1.0.3"
   }
 }
